[bugfix] Tabs: content overflow: hidden only in animated

--- a/packages/tabs/index.less
+++ b/packages/tabs/index.less
@@ -119,7 +119,9 @@
   }
 
   &__content {
-    overflow: hidden;
+    &--animated {
+      overflow: hidden;
+    }
   }
 
   &__track {
